# codeql

csharp/extractor/: WORKSPACE.bazel  paket.csharp_extractor.bzl  paket.csharp_extractor_extension.bzl  paket.dependencies  update-deps.sh
csharp/extractor/Semmle.Util/: BUILD.bazel
csharp/extractor/Semmle.Util.Tests/: BUILD.bazel
